--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Digitalt Danmark 💻🇩🇰</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
+<video controls autoplay muted width="420px" height="500px">
+    <source src="JazminTraining.MP4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+
+
+<script src="main.js"></script>
 </body>
 </html>
