--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<section>
 
-<video controls autoplay muted width="420px" height="500px">
-    <source src="JazminTraining.MP4" type="video/mp4">
-    Your browser does not support the video tag.
-</video>
+    <!-- Inspiration fra https://www.w3schools.com/tags/att_video_autoplay.asp -->
 
+    <video controls autoplay muted width="420px" height="500px">
+        <source src="JazminTraining.MP4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</section>
 
 <script src="main.js"></script>
 </body>
