--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Digitalt Danmark 💻🇩🇰</title>
+    <link rel="icon" href="kv-removebg.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <h1 class="title">
-    <EM>
-        Overskrift
-    </EM>
+    Kvinder i IT
 </h1>
 
-<br>
+<p class="complimentaryH1"><strong>Fremtiden kalder på dig!</strong></p>
 
 <section class="video">
 
@@ -42,7 +41,39 @@
     </div>
 </section>
 
-<section class="charts"></section>
+<br>
+
+<section class="charts">
+        <h2>
+            Graf 1
+        </h2>
+    <div class="chart1">
+        <p>
+            Her skal der stå noget tekst:)
+        </p>
+        <!-- INDSÆT CHART.JS-->
+    </div>
+<br>
+    <div class="chart2">
+        <h2>
+            Graf 2
+        </h2>
+        <p>
+            Her skal der stå noget tekst:)
+        </p>
+        <!-- INDSÆT CHART.JS-->
+    </div>
+<br>
+    <div class="chart3">
+        <h2>
+            Graf 3
+        </h2>
+        <p>
+            Her skal der stå noget tekst:)
+        </p>
+        <!-- INDSÆT CHART.JS-->
+    </div>
+</section>
 
 <script src="main.js"></script>
 </body>
