--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Digitalt Danmark 💻🇩🇰</title>
-    <link rel="icon" type="image/type" href="kv-removebg.png">
+    <link rel="icon" type="image/type" href="icon.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
