--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Digitalt Danmark 💻🇩🇰</title>
+    <title>Kvinder i IT | Fremtiden kalder på dig! 💻🇩🇰</title>
     <link rel="icon" type="image/type" href="icon.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
