--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
     </div>
 </section>
 
+<section class="navSection">
+    <nav>
+
+    </nav>
+</section>
+
 <script src="main.js"></script>
 </body>
 </html>
